--- a/src/public/css/payment/payment.css
+++ b/src/public/css/payment/payment.css
@@ -1,30 +1,106 @@
-.payment_main{
-    width: 40%;
-    height: 30vh;
-    margin: 5% 30%;
-    border-radius: 5px;
-    box-shadow: 3px 3px 3px 0 rgba(0, 0, 0, 0.5);
-    border: 1px solid;
-    border-color: rgb(214, 214, 214);
+.payment_main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    height: 89vh;
+    width: 100vw;
+    background: #f4f4f4;
 }
 
-.content_main{
-    width: 80%;
-    height: 80%;
-    margin: 10%;
-    align-content: space-between;
+.content_main {
+    background: #fff;
+    padding: 5%;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
-.title{
-    font-size: 2rem;
-    font-family: system-ui;
+.title {
+    font-size: 24px;
     font-weight: bold;
+    margin-bottom: 20px;
+    color: #333;
+}
+
+form {
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 8px;
+    color: #666;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+button {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    background: #007bff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+button:hover {
+    background: #0056b3;
+}
+
+.total_amount {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: #d9534f;
+}
+
+.alert_danger{
     width: 100%;
     text-align: center;
-    margin-top: 3%;
 }
 
-.payment_form{
-    margin-top: 5%;
-    text-align: center;
+.success_message, .error_message {
+    opacity: 0;
+    transform: translateY(20px); /* メッセージを下に少し移動させる */
+    animation: float 0.5s forwards; /* アニメーションを適用 */
+    transition: opacity 0.5s ease; /* フェードインの効果 */
+    color: #937b5e;
 }
+
+.error_ul{
+    list-style: none;
+}
+
+@keyframes float {
+    to {
+        opacity: 1;
+        transform: translateY(0); /* 元の位置に戻す */
+    }
+}
+
+.success_message{
+    position: absolute;
+    bottom: 3%;
+    right: 45%;
+}
+
+@media screen and (max-width: 480px) {
+    .content_main {
+    width: 250px;
+}
+}
+
