--- a/src/public/css/payment/success.css
+++ b/src/public/css/payment/success.css
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100vw;
+    position: relative;
     min-height: 100vh;
     background: #f4f4f4;
 }
@@ -49,5 +51,11 @@
     background: #0056b3;
 }
 
+.alert_success{
+    position: absolute;
+    bottom: 15%;
+    font-weight: bold;
+    color: #c6c836;
+}
 
 
