--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -36,6 +36,44 @@
     font-family: serif;
 }
 
+.index_points{
+    display: flex;
+    justify-content: end;
+    padding-right: 5%;
+    width: 100%;
+    height: 5%;
+    text-align: end;
+}
+
+.user-points {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    background: linear-gradient(135deg, #ffd737, #ffb45d);
+    padding: 10px 20px;
+    border-radius: 30px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    width: fit-content;
+}
+
+.points-label {
+    font-size: 16px;
+    opacity: 0.8;
+}
+
+.points-value {
+    background: white;
+    color: #ffcc00;
+    padding: 5px 12px;
+    border-radius: 20px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+
 .product_list {
     display: flex;
     flex-wrap: wrap;
