--- a/src/public/css/admin/category_index.css
+++ b/src/public/css/admin/category_index.css
@@ -14,6 +14,27 @@
     gap: 20px;
 }
 
+.dashboard_back_button {
+    margin-top: 30px;
+    text-align: center;
+}
+
+.dashboard_back_button{
+    text-align: center;
+    margin-bottom: 3%;
+}
+
+.dashboard_back_button_link{
+    position: absolute;
+    right: 10%;
+    top: 3%;
+    text-decoration: none;
+    padding: 1% 3%;
+    border-radius: 10px;
+    box-shadow: 3px 3px 3px 0 rgba(0, 0, 0, 0.5);
+    color: rgb(74, 120, 255);
+}
+
 .category_index_title {
     margin: 0;
     font-size: 24px;
