--- a/src/public/css/admin/dashboard.css
+++ b/src/public/css/admin/dashboard.css
@@ -1,17 +1,58 @@
-.dashboard-buttons {
+/* admin/dashboard.css */
+.dashboard {
+    font-family: 'Arial', sans-serif;
+    background-color: #f4f4f9;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
+.dashboard_title {
+    text-align: center;
+    font-size: 28px;
+    font-weight: bold;
+    color: #333;
     margin-top: 20px;
+}
+
+.dashboard_content{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.dashboard_link,
+.dashboard_nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
 }
 
 .btn {
     display: inline-block;
-    padding: 10px 20px;
-    background-color: #3498db;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
+    padding: 12px 20px;
     font-size: 16px;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 8px;
+    transition: all 0.3s ease;
 }
 
-.btn:hover {
-    background-color: #2980b9;
+.btn_primary {
+    background-color: #007bff;
+    color: white;
+    border: 2px solid #007bff;
+}
+
+.btn_primary:hover {
+    background-color: white;
+    color: #007bff;
+    border: 2px solid #007bff;
+}
+
+.dashboard_nav_btn {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
 }
