--- a/src/public/css/payment/payment.css
+++ b/src/public/css/payment/payment.css
@@ -63,6 +63,15 @@ input {
     margin-bottom: 10px;
 }
 
+select {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
 button {
     width: 100%;
     padding: 10px;
