--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -80,6 +80,10 @@
     padding: 20px;
 }
 
+.coupon_list_none{
+    text-align: center;
+}
+
 .coupon-card {
     background: linear-gradient(135deg, #ff9a9e 10%, #fad0c4 100%);
     border-radius: 12px;
