--- a/src/public/css/auth/login.css
+++ b/src/public/css/auth/login.css
@@ -140,6 +140,11 @@
     color: white;
 }
 
+.register_button {
+    background: linear-gradient(45deg, #00ff11, #00b318);
+    color: white;
+}
+
 .login_button:hover {
     transform: translateY(-3px);
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
