--- a/src/public/css/sidebar.css
+++ b/src/public/css/sidebar.css
@@ -1,11 +1,9 @@
-/* 全体のスタイルを設定 */
-body {
+/* body {
     margin: 0;
     font-family: 'Arial', sans-serif;
     background-color: #f4f4f9;
-}
+} */
 
-/* サイドバー全体のコンテナ */
 .sidebar-container {
     position: fixed;
     top: 0;
@@ -19,10 +17,9 @@ body {
 }
 
 .sidebar-container:hover {
-    width: 250px; /* ホバー時に展開 */
+    width: 250px;
 }
 
-/* サイドバーの中身 */
 .sidebar {
     color: white;
     display: flex;
@@ -34,19 +31,19 @@ body {
     opacity: 0.9;
 }
 
-/* 各リンクのスタイル */
 .sidebar a {
     display: flex;
     align-items: center;
     text-decoration: none;
-    color: white;
+    color: #68adff;
     font-size: 18px;
+    font-weight: bolder;
     padding: 10px 15px;
     width: 100%;
     border-radius: 5px;
     transition: background-color 0.3s ease, transform 0.2s ease;
-    white-space: nowrap; /* テキストの折り返しを防ぐ */
-    overflow: hidden;    /* コンテナ幅を超える部分を非表示にする */
+    white-space: nowrap;
+    overflow: hidden;
     text-overflow: ellipsis; /* 長いテキストに省略記号を付ける */
 }
 
