--- a/src/resources/js/styles/Sidebar.css
+++ b/src/resources/js/styles/Sidebar.css
@@ -1,11 +1,3 @@
-/* 全体のスタイルを設定 */
-body {
-    margin: 0;
-    font-family: 'Arial', sans-serif;
-    background-color: #f4f4f9;
-}
-
-/* サイドバー全体のコンテナ */
 .sidebar-container {
     position: fixed;
     top: 0;
@@ -19,10 +11,9 @@ body {
 }
 
 .sidebar-container:hover {
-    width: 250px; /* ホバー時に展開 */
+    width: 250px;
 }
 
-/* サイドバーの中身 */
 .sidebar {
     color: white;
     display: flex;
@@ -34,19 +25,19 @@ body {
     opacity: 0.9;
 }
 
-/* 各リンクのスタイル */
 .sidebar a {
     display: flex;
     align-items: center;
     text-decoration: none;
-    color: white;
+    color: #68adff;
     font-size: 18px;
+    font-weight: bolder;
     padding: 10px 15px;
     width: 100%;
     border-radius: 5px;
     transition: background-color 0.3s ease, transform 0.2s ease;
-    white-space: nowrap; /* テキストの折り返しを防ぐ */
-    overflow: hidden;    /* コンテナ幅を超える部分を非表示にする */
+    white-space: nowrap;
+    overflow: hidden;
     text-overflow: ellipsis; /* 長いテキストに省略記号を付ける */
 }
 
@@ -54,13 +45,11 @@ body {
     background-color: #c4c4ff;
 }
 
-/* アイコンのスタイル */
 .sidebar a i {
     font-size: 24px;
     margin-right: 15px;
 }
 
-/* 矢印ボタン */
 .arrow {
     position: absolute;
     top: 50%;
