--- a/src/public/css/product/show.css
+++ b/src/public/css/product/show.css
@@ -95,16 +95,15 @@ body.modal-open {
     overflow: hidden;
 }
 
-/* モーダル表示中の背景をぼかすクラス */
 .modal-overlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* 半透明の黒色 */
-    backdrop-filter: blur(5px); /* ぼかし効果 */
-    z-index: 999; /* モーダルの後ろになるように設定 */
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+    z-index: 999;
 }
 
 .modal {
