--- a/src/resources/js/styles/Sidebar.css
+++ b/src/resources/js/styles/Sidebar.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     height: 100vh;
-    width: 20px; /* 初期は狭い */
+    width: 20px;
     background-color: #cfcfff;
     overflow: hidden;
     transition: width 0.6s ease;
@@ -38,7 +38,7 @@
     transition: background-color 0.3s ease, transform 0.2s ease;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis; /* 長いテキストに省略記号を付ける */
+    text-overflow: ellipsis;
 }
 
 .sidebar a:hover {
